--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Search Flights From Your Terminal",
   "main": "index.js",
   "bin": {
-    "udict": "build/executables/flights.js"
+    "flights": "build/executables/flights.js"
   },
   "scripts": {
     "codecov": "codecov",
@@ -52,8 +52,11 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "chalk": "^2.3.1",
     "commander": "^2.14.1",
+    "fuzzy": "^0.1.3",
     "inquirer": "^5.1.0",
     "inquirer-autocomplete-prompt": "^0.12.1",
+    "inquirer-datepicker-prompt": "^0.4.2",
+    "moment-timezone": "^0.5.14",
     "skypicker": "^1.0.0"
   }
 }
