--- a/package.json
+++ b/package.json
@@ -52,11 +52,13 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "chalk": "^2.3.1",
     "commander": "^2.14.1",
+    "country-code-emoji": "0.0.1",
     "fuzzy": "^0.1.3",
     "inquirer": "^5.1.0",
     "inquirer-autocomplete-prompt": "^0.12.1",
     "inquirer-datepicker-prompt": "^0.4.2",
     "moment-timezone": "^0.5.14",
-    "skypicker": "^1.0.0"
+    "open": "0.0.5",
+    "skypicker": "^1.0.3"
   }
 }
