build(travis): setup travis for semantic release

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "test": "jest --coverage --passWithNoTests",
     "prepublishOnly": "npm run compile",
     "gc": "commit",
-    "semantic-release": "semantic-release"
+    "semantic-release": "semantic-release",
+    "travis-deploy-once": "travis-deploy-once"
   },
   "repository": {
     "type": "git",
@@ -46,7 +47,8 @@
     "eslint-plugin-import": "^2.8.0",
     "husky": "^0.14.3",
     "jest": "^22.3.0",
-    "semantic-release": "^12.4.1"
+    "semantic-release": "^12.4.1",
+    "travis-deploy-once": "^4.3.4"
   },
   "dependencies": {
     "babel-plugin-transform-runtime": "^6.23.0",
