--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "flights-searcher-cli",
+  "name": "flights-search-cli",
   "version": "0.0.0-development",
   "description": "Search Flights From Your Terminal",
   "main": "index.js",
@@ -28,9 +28,9 @@
   "author": "jae.b.bradley@gmail.com",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/jaebradley/flight-search-cli/issues"
+    "url": "https://github.com/jaebradley/flights-search-cli/issues"
   },
-  "homepage": "https://github.com/jaebradley/flight-search-cli#readme",
+  "homepage": "https://github.com/jaebradley/flights-search-cli#readme",
   "jest": {
     "testEnvironment": "node"
   },
