--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "codecov": "codecov",
-    "commitmsg": "commitlint -e $GIT_PARAMS",
+    "commitlint": "./node_modules/.bin/commitlint -e $GIT_PARAMS",
     "compile": "babel -d build/ src/ --ignore node_modules,*.test.js",
     "lint": "eslint --ext .js .",
     "test": "jest --coverage --passWithNoTests",
@@ -35,32 +35,32 @@
     "testEnvironment": "node"
   },
   "devDependencies": {
-    "@commitlint/cli": "^7.0.0",
-    "@commitlint/config-angular": "^7.0.1",
-    "@commitlint/prompt": "^7.0.0",
-    "@commitlint/prompt-cli": "^7.0.0",
+    "@commitlint/cli": "^8.1.0",
+    "@commitlint/config-angular": "^8.1.0",
+    "@commitlint/prompt": "^8.1.0",
+    "@commitlint/prompt-cli": "^8.1.0",
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "codecov": "^3.0.0",
-    "eslint": "^5.0.1",
-    "eslint-config-airbnb-base": "^13.0.0",
-    "eslint-plugin-import": "^2.13.0",
-    "husky": "^0.14.3",
-    "jest": "^23.2.0",
+    "eslint": "^6.3.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2",
+    "husky": "^3.0.5",
+    "jest": "^24.9.0",
     "semantic-release": "^15.6.0",
     "travis-deploy-once": "^5.0.0"
   },
   "dependencies": {
     "babel-plugin-transform-runtime": "^6.23.0",
     "chalk": "^2.3.1",
-    "commander": "^2.14.1",
-    "country-code-emoji": "0.0.1",
+    "commander": "^3.0.1",
+    "country-code-emoji": "1.0.0",
     "fuzzy": "^0.1.3",
-    "inquirer": "^6.0.0",
+    "inquirer": "^7.0.0",
     "inquirer-autocomplete-prompt": "^1.0.0",
     "inquirer-datepicker-prompt": "^0.4.2",
     "moment-timezone": "^0.5.14",
-    "open": "0.0.5",
+    "open": "6.4.0",
     "skypicker": "^1.0.3"
   }
 }
