--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "travis-deploy-once": "^5.0.0"
   },
   "dependencies": {
+    "accounting": "^0.4.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "chalk": "^2.3.1",
     "commander": "^3.0.1",
