--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,5 +2,13 @@
   "extends": "airbnb-base",
   "env": {
     "jest": true
+  },
+  "rules": {
+    "max-len": [
+      "error",
+      {
+        "code": 175
+      }
+    ]
   }
 }
