--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   },
   "scripts": {
     "codecov": "codecov",
-    "commitlint": "./node_modules/.bin/commitlint -e $GIT_PARAMS",
     "compile": "babel -d build/ src/ --ignore node_modules,*.test.js",
     "lint": "eslint --ext .js .",
+    "lint-commit-message": "./node_modules/.bin/commitlint --edit $HUSKY_GIT_PARAMS",
     "test": "jest --coverage --passWithNoTests",
     "prepublishOnly": "npm run compile",
     "gc": "commit",
@@ -39,6 +39,7 @@
     "@commitlint/config-angular": "^8.1.0",
     "@commitlint/prompt": "^8.1.0",
     "@commitlint/prompt-cli": "^8.1.0",
+    "@commitlint/travis-cli": "^8.2.0",
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "codecov": "^3.0.0",
@@ -51,6 +52,7 @@
     "travis-deploy-once": "^5.0.0"
   },
   "dependencies": {
+    "accounting": "^0.4.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "chalk": "^2.3.1",
     "commander": "^3.0.1",
