--- a/package.json
+++ b/package.json
@@ -7,15 +7,15 @@
     "flights": "build/executables/flights.js"
   },
   "scripts": {
-    "codecov": "codecov",
-    "compile": "babel -d build/ src/ --ignore node_modules,*.test.js",
-    "lint": "eslint --ext .js .",
-    "lint-commit-message": "./node_modules/.bin/commitlint --edit $HUSKY_GIT_PARAMS",
-    "test": "jest --coverage --passWithNoTests",
+    "codecov": "npx codecov",
+    "compile": "npx babel -d build/ src/",
+    "lint": "npx eslint --ext .js .",
+    "lint-commit-message": "npx commitlint --edit $HUSKY_GIT_PARAMS",
+    "test": "npx jest --passWithNoTests",
     "prepublishOnly": "npm run compile",
-    "gc": "commit",
-    "semantic-release": "semantic-release",
-    "travis-deploy-once": "travis-deploy-once"
+    "gc": "npx commit",
+    "semantic-release": "npx semantic-release",
+    "travis-deploy-once": "npx travis-deploy-once"
   },
   "repository": {
     "type": "git",
@@ -31,38 +31,36 @@
     "url": "https://github.com/jaebradley/flights-search-cli/issues"
   },
   "homepage": "https://github.com/jaebradley/flights-search-cli#readme",
-  "jest": {
-    "testEnvironment": "node"
-  },
   "devDependencies": {
-    "@commitlint/cli": "^8.1.0",
-    "@commitlint/config-angular": "^8.1.0",
-    "@commitlint/prompt": "^8.1.0",
-    "@commitlint/prompt-cli": "^8.1.0",
-    "@commitlint/travis-cli": "^8.2.0",
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "codecov": "^3.0.0",
-    "eslint": "^6.3.0",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.8.4",
+    "@babel/preset-env": "^7.8.4",
+    "@commitlint/cli": "^8.3.5",
+    "@commitlint/config-angular": "^8.3.4",
+    "@commitlint/prompt": "^8.3.5",
+    "@commitlint/prompt-cli": "^8.3.5",
+    "@commitlint/travis-cli": "^8.3.5",
+    "codecov": "^3.6.5",
+    "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.18.2",
-    "husky": "^3.0.5",
-    "jest": "^24.9.0",
-    "semantic-release": "^15.6.0",
-    "travis-deploy-once": "^5.0.0"
+    "eslint-plugin-import": "^2.20.1",
+    "husky": "^4.2.3",
+    "jest": "^25.1.0",
+    "semantic-release": "^17.0.3",
+    "travis-deploy-once": "^5.0.11"
   },
   "dependencies": {
     "accounting": "^0.4.1",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "chalk": "^2.3.1",
-    "commander": "^3.0.1",
+    "@babel/plugin-transform-runtime": "^7.8.3",
+    "chalk": "^3.0.0",
+    "commander": "^4.1.1",
     "country-code-emoji": "1.0.0",
     "fuzzy": "^0.1.3",
-    "inquirer": "^7.0.0",
-    "inquirer-autocomplete-prompt": "^1.0.0",
+    "inquirer": "^6.5.2",
+    "inquirer-autocomplete-prompt": "^1.0.2",
     "inquirer-datepicker-prompt": "^0.4.2",
-    "moment-timezone": "^0.5.14",
-    "open": "6.4.0",
+    "moment-timezone": "^0.5.27",
+    "open": "7.0.2",
     "skypicker": "^1.0.3"
   }
 }
