--- a/package.json
+++ b/package.json
@@ -32,22 +32,22 @@
   },
   "homepage": "https://github.com/jaebradley/flights-search-cli#readme",
   "devDependencies": {
-    "@babel/cli": "^7.10.1",
-    "@babel/core": "^7.10.2",
-    "@babel/preset-env": "^7.10.2",
-    "@commitlint/cli": "^8.3.5",
-    "@commitlint/config-angular": "^8.3.4",
+    "@babel/cli": "^7.12.1",
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
+    "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-angular": "^11.0.0",
     "@commitlint/prompt": "^8.3.5",
-    "@commitlint/prompt-cli": "^8.3.5",
+    "@commitlint/prompt-cli": "^11.0.0",
     "@commitlint/travis-cli": "^8.3.5",
-    "codecov": "^3.7.0",
-    "eslint": "^7.2.0",
+    "@octokit/plugin-request-log": "^1.0.2",
+    "codecov": "^3.8.1",
+    "eslint": "^7.12.1",
     "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-plugin-import": "^2.21.2",
-    "husky": "^4.2.5",
-    "jest": "^26.0.1",
-    "semantic-release": "^17.0.8",
-    "travis-deploy-once": "^5.0.11"
+    "eslint-plugin-import": "^2.22.1",
+    "husky": "^4.3.0",
+    "jest": "^26.6.3",
+    "semantic-release": "^17.2.2"
   },
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.10.5",
