--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "@babel/cli": "^7.12.1",
     "@babel/core": "^7.12.3",
+    "@babel/plugin-transform-async-to-generator": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-angular": "^11.0.0",
@@ -50,10 +51,10 @@
     "semantic-release": "^17.2.2"
   },
   "dependencies": {
-    "@babel/plugin-transform-runtime": "^7.10.5",
     "accounting": "^0.4.1",
     "chalk": "^4.1.0",
     "commander": "^5.1.0",
+    "core-js": "^3.6.5",
     "country-code-emoji": "1.0.0",
     "fuzzy": "^0.1.3",
     "inquirer": "^6.5.2",
@@ -61,6 +62,7 @@
     "inquirer-datepicker-prompt": "^0.4.2",
     "moment-timezone": "^0.5.31",
     "open": "7.1.0",
+    "regenerator-runtime": "^0.13.7",
     "skypicker": "^1.0.6"
   }
 }
