--- a/package.json
+++ b/package.json
@@ -53,15 +53,15 @@
   "dependencies": {
     "accounting": "^0.4.1",
     "chalk": "^4.1.0",
-    "commander": "^5.1.0",
+    "commander": "^6.2.0",
     "core-js": "^3.6.5",
-    "country-code-emoji": "1.0.0",
+    "country-code-emoji": "^1.0.0",
     "fuzzy": "^0.1.3",
-    "inquirer": "^6.5.2",
-    "inquirer-autocomplete-prompt": "^1.0.2",
+    "inquirer": "^7.3.3",
+    "inquirer-autocomplete-prompt": "^1.3.0",
     "inquirer-datepicker-prompt": "^0.4.2",
     "moment-timezone": "^0.5.31",
-    "open": "7.1.0",
+    "open": "^7.3.0",
     "regenerator-runtime": "^0.13.7",
     "skypicker": "^1.0.6"
   }
