feat(no-flights): add message when there are no matching flights

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,10 @@
   "env": {
     "jest": true
   },
+  "parser": "@babel/eslint-parser",
+  "plugins": [
+    "@babel"
+  ],
   "rules": {
     "max-len": [
       "error",
